# zkputer

./: .gitignore  AI_AGENT_PROTOCOL.md  Cargo.toml  HACKATHON_README.md  LICENSE  NEAR_AI_SETUP.md  PROTOCOL_COMPLIANCE.md  README.md  ZCASH_WALLET_SETUP.md  ZKputer_Plan.md  demo.py  demo_near_ai.py  docker-compose.yml
.zkputer/: ACTIVE_OPS.json  AGENT_BOOTSTRAP.md  SESSION_LOG.jsonl
.zkputer/hooks/: README.md  post_trade.py  pre_trade.py
BaseOPS/: CONFIG_SETUP.md  PROJECT_STRUCTURE.md  README.md
BaseOPS/📊 Core Trading System/: PHASE_2_COMPLETE.md  README.md  base_trade_executor.py  cdp_client.py  cdp_swap_module.py  position_tracker.py  test_cdp_connection.py  test_credentials.py
BaseOPS/📖 Status/: PRODUCTION_STATUS.md
BaseOPS/📚 Agent Handbook/: AGENT_INSTRUCTIONS.md  PROTOCOL_COMPLIANCE.md  SOURCE_PRIORITY_PROTOCOL.md  daily_OPS.md
ExtendOPS/: README.md  requirements.txt  setup_env.sh
ExtendOPS/archive/: README.md  arena_latest.json  buy_avax_now.py  cancel_orders.py  check_trade_history.py  close_sol_limit.py  close_sol_position.py  debug_extended_api.py  execute_ada_25x_NOW.py  execute_daily_trades.py  (+20 more)
HyperOPS/: CONFIG_SETUP.md  README.md
PumpOPS/: CONFIG_SETUP.md  PROJECT_STRUCTURE.md  README.md  SOLANA_SNIPER_STRATEGY.md  target_socials.md
benchmarks/: phase0_slos.json  workloads.json
docker/: Dockerfile
spec/: claim-taxonomy.json  pipeline-lifecycle.json  source-precedence.json  trust-model.txt  zkreceipt.schema.json
src/: engine.rs  lib.rs  main.py  models.rs  policy.rs  prover.rs  templates.rs  verifier.rs
tests/: rust_mvp.rs
(+201 files in other folders)
