[package]
name = "zkputer"
version = "0.1.0"
edition = "2021"
description = "Verification layer for agent actions with cryptographic receipts."
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
